# multi-agent

./: .gitignore  LICENSE  README.md  agent.py  download_model.sh  download_model_path_input.sh  llm.py  ollama-install.sh  pyproject.toml  requirements.txt  stop-ollama.sh  test-imports.py  test-ollama.py
langgraph/db_agent/: db-agent.py  db-setup.py  helper.py  llm.py  prompt.py
